# Chatbot

./: README.md
Chatbot1/: .gitignore  COMPLETE_PROJECT_GUIDE.md  app.py  main.py  pyproject.toml  requirements.txt  run.bat  test_gemini.py
chatbot2/: .gitignore  COMPLETE_PROJECT_GUIDE.md  PROJECT_GUIDE.md  chatbot_engine.py  evaluation_engine.py  main.py  pyproject.toml  real_metrics.py  requirements.txt  run.bat  run_pipeline.py
chatbot3/: .gitignore  COMPREHENSIVE_PROJECT_GUIDE.md  PROJECT_CODE_WALKTHROUGH.md  README.md  chatbot_engine.py  run.bat  run_pipeline.py  test_deepeval.py  test_ragas.py
chatbot3/config/: azure_clients.py  settings.py
chatbot3/data/: input.xlsx
chatbot3/evaluation/: deepeval_config.py  deepeval_metrics.py  evaluation_engine.py  ragas_config.py  ragas_metrics.py
