[project]
name = "chat-with-multiple-pdf-documents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf2>=3.0.1",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
