[project]
name = "chat-with-multiple-pdf-documents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "google-generativeai==0.7.2",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-google-genai==1.0.10",
    "langchain-ollama>=0.1.3",
    "langchain-text-splitters>=0.2.2",
    "pydantic==2.7.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "numpy>=1.26.0",
    "datasets>=2.20.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.7.0",
    "deepeval>=2.0.0",
    "ragas==0.1.21",
    "google-genai>=1.2.0",
    "posthog>=7.16.2",
]
